--- a/Week2/form.html
+++ b/Week2/form.html
@@ -2,10 +2,16 @@
 
 <body>
 
+<h2>Guess a number:</h2>
+
+<p> Please input a number between 1 and 10:</p>
+
   <form method="POST" action="/yourform">
-    <input type="text" name="textfield" value="The Value for user"/>
+    <input type="text" name="textfield" value=""/>
     <input type="submit" name="submit" value="Submit">
+     <input type="reset">
   </form>
+
 
 </body>
 </html>
