--- a/Week2/form.html
+++ b/Week2/form.html
@@ -2,9 +2,9 @@
 
 <body>
 
-<h2>Guess a number:</h2>
+<h2>What year is ITP founded?</h2>
 
-<p> Please input a number between 1 and 10:</p>
+<p> Please input a number between 1900 and 2000:</p>
 
   <form method="POST" action="/yourform">
     <input type="text" name="textfield" value=""/>
